<wip: optimizing compilation times>